--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "gsap": "^3.12.7",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
